add changes in cart ui

--- a/Tabs/Cart.html
+++ b/Tabs/Cart.html
@@ -62,7 +62,10 @@
         <h1>Your Shopping Cart</h1>
         <div id="cart-items"></div>
         <p id="total-price">Total Price: ₹0</p>
-        <button id="checkout-button">Checkout</button>
+        <div class="button-container">
+          <button id="checkout-button">Checkout</button>
+          <button id="clear-cart-button">Clear Cart</button>
+        </div>
       </div>
     </div>
 
